fixed row gap issue

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ span{
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 1rem;
   width: 100%;
   height: auto;
   padding: 50px 10px;
@@ -82,7 +83,7 @@ span{
     color:var(--var-primary-color);
 }
 button{
-    margin-top:30px;
+   /* margin-top:30px;*/
     border:none;
     outline: none;
     background: rgb(9, 9, 9);
